# Ascend310

./: README.md
inc/: adxl345.h  ds1339u.h  esp32_c3.h  font.h  human_segmentation.h  i2c.h  key.h  led.h  ms1100.h  multiButton.h  pca9557.h  sht20.h  spi.h  ssd1306.h  task.h  uart.h  v4l2.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  adxl345.c  cmake_install.cmake  ds1339u.c  esp32_c3.c  human_segmentation.cpp  i2c.c  key.c  led.c  main.cpp  ms1100.c  multiButton.c  object_detect.cpp  pca9557.c  sht20.c  spi.c  ssd1306.c  task.c  uart.c  v4l2.c  yolov3.cpp
